# EspIDFWorkspace

./: .gitignore
server/: server.py
server/templates/: index.html
server/uploads/: adc_20260629_122543.csv  adc_20260629_130108.csv  adc_20260629_130147.csv
test/: .clangd  .cproject  idf_component_manager.yml  sdkconfig  sdkconfig.old
test/main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
test/main/core/: adc.c  adc.h  buttons.c  buttons.h  device_statuses.c  device_statuses.h  leds.c  leds.h  uploader.c  uploader.h  wifi.c  wifi.h
